--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-//    compile 'com.android.support:support-v4:19.1.0'
     compile 'com.google.android.gms:play-services-maps:10.0.0'
     compile 'com.google.android.gms:play-services-location:10.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
@@ -41,12 +41,10 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.5'
     compile 'com.android.support:design:25.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
-    // dagger
-    compile "com.google.dagger:dagger:2.9"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
-    provided 'javax.annotation:jsr250-api:1.0'
-
+    compile 'com.google.dagger:dagger:2.9'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
