--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:theme="@style/AppTheme">
-        <!--android:supportsRtl="true"-->
-        <!--android:roundIcon="@mipmap/ic_launcher_round"-->
+
+        <!-- android:supportsRtl="true" -->
+        <!-- android:roundIcon="@mipmap/ic_launcher_round" -->
+
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -38,13 +39,18 @@
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".standdetail.StandActivity"
             android:label="@string/title_activity_stand"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".rentbike.RentBikeActivity"
+            android:label="@string/title_activity_rent_bike"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
