--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,14 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
 
+    // dependencies for local unit tests
     testCompile 'junit:junit:4.12'
+//    testCompile 'org.json:json:20140107'
+    testCompile "org.mockito:mockito-core:2.8.9"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
+//    testCompile "org.robolectric:robolectric:3.3.2"
+//    testCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
+
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     provided 'javax.annotation:jsr250-api:1.0'
