--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
 
+
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+
     // dependencies for local unit tests
     testCompile 'junit:junit:4.12'
 //    testCompile 'org.json:json:20140107'
